--- a/style.css
+++ b/style.css
@@ -7,22 +7,82 @@
 }
 
 nav {
-    padding: 32px 32px;
-    min-height: 80px;
-    background: #1f1f1f;
+    padding: 10px;
+    min-height: 50px;
+    background: white;
+    color: black;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    
+}
+
+nav a {
+    color: grey;
+    font-size: 20px;
+}
+
+nav > ul {
+    display: flex;
+    align-items: center; 
+    gap: 24px; 
+    height: 100%; 
+}
+
+.logo {
+    margin: 0px;
+    height: 60px;
+}
+nav img {
+    height: 30px;
+    width: auto;
+    padding-left: 80px;
+    margin-top: 12px;
+}
+
+nav > ul > li {
+    margin: 0; /* zera */
 }
 
 nav > a {
     vertical-align: bottom;
 }
 
-nav > ul {
-    float: right;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 32px;
+.background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
+}
+
+main {
+    position: relative;
+    min-height: 100vh;
+}
+
+.user {
+    position: relative;
+    padding-left: 950px;
+    max-width: 30px;
+    height: auto;
+    
+}
+
+.user img {
+    max-width: 100px;
+    height: auto;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background: white;
+    color: black;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    text-align: center;
+    padding: 10px;
 }
