--- a/style.css
+++ b/style.css
@@ -56,6 +56,26 @@ nav > a {
     z-index: -1;
 }
 
+.Build {
+    float: left;
+    clear: right;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60%;
+    height: 60vh;
+    object-fit: cover;
+}
+
+.BuildNames > p{
+    display: flex;
+    float: right;
+    clear: left;
+    width: 35%;
+    font-size: 20px;
+}
+
+
 main {
     position: relative;
     min-height: 100vh;
@@ -101,12 +121,16 @@ footer a {
 
 }
 
+section h2{
+    color: black;
+}
+
 h2 {
     color: white;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    padding-left: 100px;
     padding-top: 70px;
     font-size: 40px;
+    text-align: center;
 }
 
 .button {
@@ -120,3 +144,31 @@ h2 {
     border: 10px;
 }
 
+.performance-specs {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    margin-top: 30px;
+}
+
+
+.spec {
+    text-align: center;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+.spec .label {
+    font-size: 18px;
+    color: #333;
+}
+
+.spec .value {
+    font-size: 40px;
+    color: black;
+    font-weight: bold;
+}
+
+.spec .unit {
+    font-size: 14px;
+    color: #555;
+}
