--- a/style2.css
+++ b/style2.css
@@ -60,17 +60,38 @@ nav > a {
 }
 
 footer {
+    position: -webkit-sticky;
+    position: sticky;
     bottom: 0;
     background-color: #1f1f1f;
     color: white;
     text-align: center;
-    padding: 1%;
-    min-height: 70px;
+    min-height: 60px;
+    height: auto;
     top: 0;
     background-color: black;
     z-index: 100;
     display: flex;
-    padding: 10px 20px;
+    width: 100%;
+    font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+}
+
+.price-footer {
+    position: -webkit-sticky;
+    position: sticky;
+    bottom: 0;
+    background-color: #1f1f1f;
+    color: white;
+    text-align: center;
+    min-height: 60px;
+    height: auto;
+    top: 0;
+    background-color: black;
+    z-index: 100;
+    justify-content: space-around;
+    display: flex;
+    width: 100%;
     font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 }
@@ -263,8 +284,9 @@ tbody{
         margin-right: 10px;
     }
     .price {
-        font-size: 1rem;
-        margin-bottom: 15px;
+        font-size: 15px;
+        font-weight: bold;
+        text-align: center;
     }
     .performance {
         margin-bottom: 10px;
@@ -272,10 +294,29 @@ tbody{
     .performance b {
         font-size: 1rem;
     }
-    .performance span {
+    .performance span, .price span {
         display: block;
-        font-size: 0.9rem;
+        font-size: 12px;
         color: #555;
+    }
+
+    .price b{
+        font-size: 16px;
+        padding-left: 10px;
+        padding-top: 0px;
+        padding-bottom: 23px;
+    }
+
+    .price{
+        display: flex;
+        align-items: center;
+        text-align: right;
+        padding-left: 200px;
+        justify-content: space-between;
+    }
+     
+    #summary {
+        border: 1px solid #666;
     }
     .links {
         margin-top: 20px;
