--- a/style2.css
+++ b/style2.css
@@ -1,9 +1,9 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style: none;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        text-decoration: none;
+        list-style: none;
 }
 
 nav {
@@ -39,7 +39,7 @@ nav img {
 }
 
 nav > ul > li {
-    margin: 0; /* zera */
+    margin: 0;
 }
 
 nav > a {
@@ -135,29 +135,6 @@ h2 {
     margin-top: 30px;
 }
 
-
-.spec {
-    text-align: center;
-font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-.spec .label {
-    font-size: 18px;
-    color: #333;
-}
-
-.spec .value {
-    font-size: 40px;
-    color: black;
-    font-weight: bold;
-}
-
-.spec .unit {
-    font-size: 14px;
-    color: #555;
-}
-
-
 .image-slider input {
     display: none;
 }
@@ -166,28 +143,6 @@ font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     display: none;
     transition: opacity 0.3s ease-in-out;
 }
-
-#specs-table{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-.title-specs{
-    text-align: center;
-    font-size: 30px;
-    font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    
-}
-tbody{
-    background-color: #f0f6f7;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
 
 /*BuildPricePage*/
 
@@ -225,35 +180,36 @@ tbody{
         min-width: 300px;
     }
     .trimline-section h1 {
-        font-size: 2rem;
+        font-size: 30px;
         font-weight: bold;
         margin: 0;
         padding-top: 30px;
     }
     .trimline-section h2 {
-        font-size: 1.3rem;
+        font-size: 18px;
         font-weight: normal;
         padding: 0;
         text-align: left;
     }
     .step {
-        font-size: 0.9rem;
+        font-size: 15px;
         color: #666;
     }
+
     .section-title {
-        font-size: 1.5rem;
+        font-size: 23px;
         font-weight: normal;
         margin-bottom: 20px;
         align-items: right;
         text-align: left;
     }
     .step-wheels, .step-interior {
-        font-size: 0.9rem;
+        font-size: 15px;
         color: #666;
         text-align: center;
     }
     .section-title-wheels, .section-title-interior {
-        font-size: 1.5rem;
+        font-size: 23px;
         font-weight: normal;
         margin-bottom: 20px;
         align-items: right;
@@ -272,7 +228,7 @@ tbody{
         max-width: 400px;
     }
     .card h3 {
-        font-size: 1rem;
+        font-size: 20px;
         font-weight: normal;
         display: flex;
         align-items: center;
@@ -280,7 +236,7 @@ tbody{
     }
     .card h3::before {
         content: "◉";
-        font-size: 1.2rem;
+        font-size: 16px;
         margin-right: 10px;
     }
     .price {
@@ -292,7 +248,7 @@ tbody{
         margin-bottom: 10px;
     }
     .performance b {
-        font-size: 1rem;
+        font-size: 16px;
     }
     .performance span, .price span {
         display: block;
@@ -343,11 +299,7 @@ tbody{
         width: 100%;
         transition: transform 0.6s;
     }
-    
-    #colorcard {
-        width: 60px;
-        border-radius: 100px;
-    }
+
     .slide {
         width: 100%;
         flex: 1 0 100%;
@@ -458,8 +410,6 @@ tbody{
         margin-left: 0;
     }
     
-    
-      
       .car-slide img {
         display: block;
         width: 100%;
@@ -505,7 +455,7 @@ tbody{
       }
       
       .glacier-white {
-        background: linear-gradient(135deg, #e0e0e0 50%, #b0b0b0 50%);
+        background-color: #c1c5c2;
       }
       
       .ascari-blue {
@@ -527,10 +477,6 @@ tbody{
       .crytal{
         background-color: #1C1C1C;
       }
-
-
-    
-
 
 .car-slide {
   display: none;
