--- a/style3.css
+++ b/style3.css
@@ -12,7 +12,6 @@
 
 }
 
-
 nav {
     grid-area: heading;
     padding: 10px;
@@ -20,7 +19,7 @@ nav {
     background: white;
     color: black;
     font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    
+    display: inline;   
 }
 
 nav a {
@@ -67,7 +66,7 @@ nav > a {
     height: auto;
 }
 
-.message {
+header {
     grid-area: message;
     padding: 10px;
     min-height: 50px;
@@ -83,6 +82,7 @@ nav > a {
     max-width: 300px;
     height: auto;
     border-radius: 50px;
+    clear: both;
 }
 
 .contact{
@@ -109,10 +109,6 @@ nav > a {
 }
 
 
-
-
-
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -129,583 +125,3 @@ color: black;
 font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 }
-
-nav a {
-color: grey;
-font-size: 20px;
-}
-
-nav > ul {
-display: flex;
-align-items: center; 
-gap: 24px; 
-height: 100%; 
-}
-
-.logo {
-margin: 0px;
-height: 60px;
-}
-nav img {
-height: 30px;
-width: auto;
-padding-left: 80px;
-margin-top: 12px;
-}
-
-nav > ul > li {
-margin: 0;
-}
-
-nav > a {
-vertical-align: bottom;
-}
-
-.user {
-position: relative;
-padding-left: 950px;
-max-width: 30px;
-height: auto;
-
-}
-
-.user img {
-max-width: 100px;
-height: auto;
-}
-
-footer {
-position: -webkit-sticky;
-position: sticky;
-bottom: 0;
-background-color: #1f1f1f;
-color: white;
-text-align: center;
-min-height: 60px;
-height: auto;
-top: 0;
-background-color: black;
-z-index: 100;
-display: flex;
-width: 100%;
-font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-
-}
-
-.price-footer {
-position: -webkit-sticky;
-position: sticky;
-bottom: 0;
-background-color: #1f1f1f;
-color: white;
-text-align: center;
-min-height: 60px;
-height: auto;
-top: 0;
-background-color: black;
-z-index: 100;
-justify-content: space-around;
-display: flex;
-width: 100%;
-font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-
-}
-
-footer a {
-color: white;
-margin-left: 50px;
-font-size: 17px;
-padding-top: 15px;
-text-align: center;
-
-}
-
-.button {
-display: inline-block;
-font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-margin-top: 10px;
-margin-left: 100px;
-background-color: rgb(255, 255, 255);
-color: black;
-padding: 15px 30px;
-border: 10px;
-}
-
-.performance-specs {
-display: flex;
-justify-content: center;
-gap: 100px;
-margin-top: 30px;
-}
-
-.image-slider input {
-display: none;
-}
-
-.text-index .text {
-display: none;
-transition: opacity 0.3s ease-in-out;
-}
-
-/*BuildPricePage*/
-
-.BuildColors {
-display: block;
-margin-top: 40px;
-margin-bottom: 40px;
-}
-
-
-.BuildPrice {
-display: flex;
-align-items: flex-start;
-justify-content: flex-start;
-flex-direction: column;
-
-}
-
-.BuildNames {
-display: flex;
-flex-direction: row;
-justify-content: center;
-gap: 40px;
-}
-.trimline-section {
-    font-family: 'Fira Sans', sans-serif;
-    color: #222;
-    flex: 1;
-    min-width: 300px;
-}
-.trimline2-section {
-    font-family: 'Fira Sans', sans-serif;
-    color: #222;
-    flex: 1;
-    min-width: 300px;
-}
-.trimline-section h1 {
-    font-size: 30px;
-    font-weight: bold;
-    margin: 0;
-    padding-top: 30px;
-}
-.trimline-section h2 {
-    font-size: 18px;
-    font-weight: normal;
-    padding: 0;
-    text-align: left;
-}
-.step {
-    font-size: 15px;
-    color: #666;
-}
-
-.section-title {
-    font-size: 23px;
-    font-weight: normal;
-    margin-bottom: 20px;
-    align-items: right;
-    text-align: left;
-}
-.step-wheels, .step-interior {
-    font-size: 15px;
-    color: #666;
-    text-align: center;
-}
-.section-title-wheels, .section-title-interior {
-    font-size: 23px;
-    font-weight: normal;
-    margin-bottom: 20px;
-    align-items: right;
-    text-align: left;
-}
-.card {
-    border: 1px solid #000;
-    padding: 20px;
-    border-radius: 4px;
-    max-width: 400px;
-}
-.card-bottom {
-    border-bottom: 1px solid #000;
-    padding: 20px;
-    border-radius: 4px;
-    max-width: 400px;
-}
-.card h3 {
-    font-size: 20px;
-    font-weight: normal;
-    display: flex;
-    align-items: center;
-    margin: 0 0 10px;
-}
-.card h3::before {
-    content: "◉";
-    font-size: 16px;
-    margin-right: 10px;
-}
-.price {
-    font-size: 15px;
-    font-weight: bold;
-    text-align: center;
-}
-.performance {
-    margin-bottom: 10px;
-}
-.performance b {
-    font-size: 16px;
-}
-.performance span, .price span {
-    display: block;
-    font-size: 12px;
-    color: #555;
-}
-
-.price b{
-    font-size: 16px;
-    padding-left: 10px;
-    padding-top: 0px;
-    padding-bottom: 23px;
-}
-
-.price{
-    display: flex;
-    align-items: center;
-    text-align: right;
-    padding-left: 200px;
-    justify-content: space-between;
-}
- 
-#summary {
-    border: 1px solid #666;
-}
-.links {
-    margin-top: 20px;
-}
-.links a {
-    display: inline-block;
-    margin-bottom: 10px;
-    text-decoration: none;
-    color: #000;
-    border-bottom: 0.1px solid #000;
-    font-size: 15px;
-}
-.image-slider {
-    position: relative;
-    width: 1000px; 
-    height: 600px;
-    margin: 20px auto;
-    overflow: hidden;
-    border-radius: 10px;
-}
-
-.slides {
-    display: flex;
-    width: 100%;
-    transition: transform 0.6s;
-}
-
-.slide {
-    width: 100%;
-    flex: 1 0 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
-
-.slide img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-
-}
-
-input[name="slider"] {
-    display: none;
-}
-
-.navigation-manual {
-    position: absolute;
-    width: 100%;
-    bottom: 15px;
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
-
-.navigation-manual label img{
-    width: 50px;
-    height: 50px;
-    border-radius: 100px;
-}
-
-.BuildPrice img{
-    align-items: left;
-}
-.manual-btn {
-    border-radius: 50px;
-    cursor: pointer;
-    transition: 0.3s;
-    background: rgba(0, 0, 0, 0.5);
-    color: white;
-    font-size: 30px;
-}
-
-.manual-btn:hover {
-    background: #fff;
-    color: black;
-}
-
-#slide1:checked ~ .slides {
-    transform: translateX(0%);
-}
-#slide2:checked ~ .slides {
-    transform: translateX(-100%);
-}
-#slide3:checked ~ .slides {
-    transform: translateX(-200%);
-}
-#slide4:checked ~ .slides {
-    transform: translateX(-300%);
-}
-#slide5:checked ~ .slides {
-    transform: translateX(-400%);
-}
-
-.fuel-consumption {
-    font-size: 16px;
-    color: #555;
-    justify-content: center;
-    text-align: center;
-}
-
-.Fuel{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 100px;
-}
-
-.color-slider, .wheels-slider, .interior-slider {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin-top: 40px;
-  }
-  
-  .color-selection, .wheels-selection, .interior-selection {
-    display: flex;
-    gap: 40px;
-    position: relative;
-  }
-  
-  input[name="car-color"] {
-    display: none;
-  }
-
-  input[name="wheels"] {
-    display: none;
-  }
-  input[name="interior"] {
-    display: none;
-  }
-  
-  .car-images {
-    width: 1000px;
-    margin-left: 0;
-}
-
-  .car-slide img {
-    display: block;
-    width: 100%;
-    height: auto;
-    margin: 0;
-    padding: 0;
-    object-fit: cover;
-}
-
-  
-  .car-slide {
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 0.5s ease;
-  }
-  #color-grey:checked ~ .car-images #grey,
-  #color-black:checked ~ .car-images #black,
-  #color-white:checked ~ .car-images #white,
-  #color-blue:checked ~ .car-images #blue,
-  #color-silver:checked ~ .car-images #silver,
-  #color-red:checked ~ .car-images #red,
-  #color-daytona:checked ~ .car-images #daytona,
-  #color-blackCristal:checked ~ .car-images #blackCristal{
-    display: block;
-    opacity: 1;
-    position: relative;
-    z-index: 1;
-  }
-
-  
-  .color-dot:hover {
-    transform: scale(1.1);
-  }
-  
-  .nardo-grey {
-    background-color: #6b6b6b;
-  }
-  
-  .mythos-black {
-    background-color: #1a1a1a;
-  }
-  
-  .glacier-white {
-    background-color: #c1c5c2;
-  }
-  
-  .ascari-blue {
-    background-color: #1e3a8a;
-  }
-
-  .silver{
-    background-color: #C2C3C7;
-  }  
-  
-  .red{
-    background-color: #A30B20;
-  }
-  
-  .daytona{
-    background-color: #4C4F56;
-  }
-  
-  .crytal{
-    background-color: #1C1C1C;
-  }
-
-.car-slide {
-display: none;
-}
-
-input#color-grey:checked ~ .car-images #grey,
-input#color-black:checked ~ .car-images #black,
-input#color-white:checked ~ .car-images #white,
-input#color-blue:checked ~ .car-images #blue,
-input#color-silver:checked ~ .car-images #silver,
-input#color-red:checked ~ .car-images #red,
-input#color-daytona:checked ~ .car-images #daytona,
-input#color-blackCristal:checked ~ .car-images #blackCristal {
-display: block;
-opacity: 1;
-position: relative;
-z-index: 1;
-}
-
-.color-content {
-flex: 1;
-display: flex;
-flex-direction: column;
-gap: 20px;
-align-items: flex-end;
-padding-left: 30px;
-}
-
-.wheels-content, .interior-content{
-flex: 1;
-display: flex;
-flex-direction: column;
-gap: 20px;
-align-items: center;
-padding-left: 30px;
-}
-
-.color-buttons, .wheels-buttons, .interior-buttons {
-display: flex;
-flex-direction: column;
-gap: 10px;
-}
-
-.color-option, .wheels-option, .interior-option {
-display: flex;
-align-items: center;
-gap: 10px;
-}
-
-.color-dot {
-width: 20px;
-height: 20px;
-border-radius: 50%;
-display: inline-block;
-cursor: pointer;
-}
-
-.wheels-dot, .interior-dot {
-width: 20px;
-height: 20px;
-background-color: #000;
-border-radius: 50%;
-display: inline-block;
-cursor: pointer;
-}
-
-.wheels-dot:hover, .interior-dot:hover {
-transform: scale(1.1);  
-}
-
-
-
-.nardo-grey { background-color: #999; }
-.mythos-black { background-color: #000; }
-.glacier-white { background-color: #eee; border: 1px solid #ccc; }
-.ascari-blue { background-color: #0055aa; }
-.silver { background-color: #C2C3C7; }
-.red { background-color: #A30B20; }
-.daytona { background-color: #4C4F56; }
-.crytal { background-color: #1C1C1C; }
-
-
-
-.wheels-slide, .interior-slide {
-display: none;
-position: absolute;
-top: 0;
-left: 0;
-opacity: 0;
-transition: opacity 0.5s ease;
-}
-
-.wheels-images, .interior-images {
-position: relative;
-z-index: 2;
-}
-
-.wheels-slide img, .interior-slide img {
-position: relative;
-width: 1000px;
-height: 700px;
-border-radius: 10px;
-flex: 1;
-padding-left: 0px;
-margin-left: 0px;
-align-items: left;
-}
-
-.car-slide,
-.wheels-slide {
-display: none;
-}
-#wheels-1:checked ~ .wheels-images #FirstWheels,
-#wheels-2:checked ~ .wheels-images #SecondWheels,
-#wheels-3:checked ~ .wheels-images #ThirdWheels,
-#wheels-4:checked ~ .wheels-images #FourWheels,
-#interior-1:checked ~ .interior-images #FirstInterior,
-#interior-2:checked ~ .interior-images #SecondInterior,
-#interior-3:checked ~ .interior-images #ThirdInterior,
-#interior-4:checked ~ .interior-images #FourInterior,
-#interior-5:checked ~ .interior-images #FiveInterior {
-display: block;
-opacity: 1;
-position: relative;
-z-index: 1;
-}
-
-
-
