--- a/style.css
+++ b/style.css
@@ -6,43 +6,50 @@
     list-style: none;
 }
 
-nav {
-    padding: 0.5%;
-    min-height: 5%;
-    background: white;
-    color: black;
-    font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    height: 10vh;
-    
+html, body {
+    overflow-x: hidden;
+    width: 100%;
 }
 
-nav a {
-    color: grey;
-    font-size: 1.1rem;
-}
-
-nav > ul {
+.nav-container {
     display: flex;
-    align-items: center; 
-    gap: 2rem;
-    height: 100%; 
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem;
+    height: 10vh;
+    position: relative;
+    font-family: 'Poppins', sans-serif;
 }
 
-nav img {
+.logo img {
     height: 2rem;
-    width: auto;
-    padding-left: 2rem;
-}
-
-.user {
-    margin-left: auto; 
-    padding-right: 2rem;
 }
 
 .user img {
-    width: clamp(50px, 4vw, 60px); 
+    width: clamp(35px, 4vw, 50px);
     height: auto;
-    object-fit: contain;
+}
+
+#menu-toggle {
+    display: none;
+}
+
+.hamburger {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+    padding: 0 1rem;
+    color: black;
+}
+
+.nav-links {
+    display: flex;
+    gap: 2rem;
+}
+
+.nav-links li a {
+    color: grey;
+    font-size: 1.1rem;
 }
 
 .background {
@@ -55,7 +62,134 @@ nav img {
     z-index: -1;
 }
 
+/* mobile */
+@media (max-width: 767px) {
+     .nav-links {
+        display: none;
+        flex-direction: column;
+        background-color: white;
+        position: absolute;
+        top: 10vh;
+        left: 0;
+        width: 100%;
+        text-align: center;
+        gap: 1rem;
+        padding: 1rem 0;
+        z-index: 999;
+        border-top: 1px solid #ccc;
+    }
 
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        background-color: white;
+        position: absolute;
+        top: 10vh;
+        left: 0;
+        width: 100%;
+        text-align: center;
+        gap: 1rem;
+        padding: 1rem 0;
+        z-index: 999;
+        border-top: 1px solid #ccc;
+        animation: slideDown 1.0s ease-in-out;
+        opacity: 0;
+    }
+
+    #menu-toggle:checked + .hamburger + .nav-links {
+        display: flex;
+        animation: fadeIn; 
+        animation-duration: 1s;
+        opacity: 1;
+    }
+
+    .hamburger {
+        display: flex;
+    }
+    nav > ul {
+        flex-direction: column;
+        gap: 1rem;
+        padding: 0.5rem;
+    }
+
+    .user {
+        margin-left: 0;
+        padding-right: 0;
+    }
+
+    .button {
+        margin-left: 0;
+        padding: 10px 20px;
+        font-size: 0.9rem;
+    }
+
+    footer{
+        flex-direction: column; 
+    }
+
+    footer a {
+        margin-left: 0;
+        margin-top: 1%;
+        font-size: 3vw;
+    }
+
+  .performance-specs {
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .slide {
+    width: 100%;
+    height: auto;
+  }
+
+  .slides, .slides2, .slides3 {
+    gap: 0px;
+    width: 300%;
+  }
+
+  .audio-player audio {
+    width: 90%;
+  }
+
+  .Build {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .BuildText h2 {
+    font-size: 24px;
+  }
+}
+
+/* ------------------ TABLET ------------------ */
+@media (min-width: 768px) and (max-width: 1024px) {
+  nav > ul {
+    gap: 1.5rem;
+  }
+
+  .performance-specs {
+    flex-wrap: wrap;
+    gap: 3rem;
+  }
+
+  .Build {
+    flex-direction: row;
+    width: 90%;
+  }
+
+  .BuildText h2 {
+    font-size: 32px;
+  }
+
+  .slide {
+    width: 50%;
+  }
+
+  .audio-player audio {
+    width: 60%;
+  }
+}
 main {
     position: relative;
     min-height: 100vh;
@@ -70,23 +204,22 @@ footer {
     color: white;
     text-align: center;
     padding: 1%;
-    min-height: 70px;
+    min-height: 5rem;
     top: 0;
     background-color: black;
     z-index: 100;
     display: flex;
-    padding: 10px 20px;
+    padding: 1rem 2 rem;
     font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 }
 
 footer a {
     color: white;
-    margin-left: 50px;
-    font-size: 17px;
-    padding-top: 15px;
+    margin-left: 3%;
+    font-size: 100%;
+    padding-top: 1%;
     text-align: center;
-
 }
 
 section h2{
