--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ section h2{
 h2 {
     color: white;
     font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    padding-top: 70px;
+    padding-top: 7%;
     font-size: 40px;
     text-align: center;
 }
@@ -291,21 +291,21 @@ h2 {
 .slides {
     display: flex;
     transition: transform 0.5s ease;
-    gap: 1975px;               
+    gap: 65%;               
     width: calc(300% + 60px);
 }
 
 .slides2 {
     display: flex;
     transition: transform 0.5s ease;
-    gap: 1975px;               
+    gap: 65%;               
     width: calc(300% + 60px);
 }
 
 .slides3 {
     display: flex;
     transition: transform 0.5s ease;
-    gap: 1975px;               
+    gap: 65%;               
     width: calc(300% + 60px);
 }
 
