--- a/style3.css
+++ b/style3.css
@@ -7,69 +7,190 @@
         "contact contact ";
     justify-content: center;
     align-content: center;
-    gap: 10px;
+    gap: 1%;
     border-radius: 30px;
 
 }
 
 nav {
-    grid-area: heading;
-    padding: 10px;
-    min-height: 50px;
+    min-height: 5%;
     background: white;
     color: black;
     font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    display: inline;   
+
 }
 
-nav a {
-    color: grey;
-    font-size: 20px;
-}
-
-nav > ul {
+.nav-container {
     display: flex;
-    align-items: center; 
-    gap: 24px; 
-    height: 100%; 
-}
-
-.logo {
-    margin: 0px;
-    height: 60px;
-}
-nav img {
-    height: 30px;
-    width: auto;
-    padding-left: 80px;
-    margin-top: 12px;
-}
-
-nav > ul > li {
-    margin: 0;
-}
-
-nav > a {
-    vertical-align: bottom;
-}
-
-.user {
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem;
+    height: 10vh;
     position: relative;
-    padding-left: 950px;
-    max-width: 30px;
-    height: auto;
-    
+    font-family: 'Poppins', sans-serif;
+}
+
+.logo img {
+    height: 2rem;
 }
 
 .user img {
-    max-width: 40px;
+    width: clamp(35px, 4vw, 50px);
     height: auto;
+}
+
+#menu-toggle {
+    display: none;
+}
+
+.hamburger {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+    padding: 0 1rem;
+    color: black;
+}
+
+.nav-links {
+    display: flex;
+    gap: 2rem;
+}
+
+.nav-links li a {
+    color: grey;
+    font-size: 1.1rem;
+}
+
+.background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
+}
+
+/* mobile */
+@media (max-width: 767px) {
+    #contact-form{
+        display: grid;
+        background-color: rgb(255, 255, 255);
+        width: 100%;
+        grid-template-areas:
+            "photo photo "
+            "message message "
+            "contact contact ";
+        justify-content: center;
+        align-content: center;
+        gap: 1%;
+        border-radius: 30px;
+
+    }
+     .nav-links {
+        display: none;
+        flex-direction: column;
+        background-color: white;
+        position: absolute;
+        top: 10vh;
+        left: 0;
+        width: 100%;
+        text-align: center;
+        gap: 1rem;
+        padding: 1rem 0;
+        z-index: 999;
+        border-top: 1px solid #ccc;
+    }
+
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        background-color: white;
+        position: absolute;
+        top: 10vh;
+        left: 0;
+        width: 100%;
+        text-align: center;
+        gap: 1rem;
+        padding: 1rem 0;
+        z-index: 999;
+        border-top: 1px solid #ccc;
+        animation: slideDown 1.0s ease-in-out;
+        opacity: 0;
+    }
+
+    #menu-toggle:checked + .hamburger + .nav-links {
+        display: flex;
+        animation: fadeIn; 
+        animation-duration: 1s;
+        opacity: 1;
+    }
+
+    .hamburger {
+        display: flex;
+    }
+    nav > ul {
+        flex-direction: column;
+        gap: 1rem;
+        padding: 0.5rem;
+    }
+
+    .user {
+        margin-left: 0;
+        padding-right: 0;
+    }
+    .photo{
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .photo img{
+    grid-area: photo;
+    float: left;
+    max-width: 100%;
+    height: auto;
+    border-radius: 50px;
+    clear: both;
+    
+}
+
+    .contact{
+        grid-area: contact;
+        display: flex;
+        flex-direction: column;
+        max-width: 30px;
+        padding-right: 20px;
+        height: auto;
+        display: flex;
+        gap: 20px;
+        padding-left: 40px;
+    }
+
+
+    .contact img{
+        max-width: 50px;
+        padding-right: 20px;
+        height: auto;
+        display: flex;
+        
+    }
+
+    header {
+    grid-area: message;
+    padding: 5%;
+    min-height: 100%;
+    margin-bottom: 5%;
+    background: black;
+    color: white;
+    font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    border-radius: 30px;
+}
 }
 
 header {
     grid-area: message;
-    padding: 10px;
-    min-height: 50px;
+    padding: 5%;
     background: black;
     color: white;
     font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -79,7 +200,7 @@ header {
 .photo img{
     grid-area: photo;
     float: left;
-    max-width: 300px;
+    max-width: 100%;
     height: auto;
     border-radius: 50px;
     clear: both;
@@ -87,7 +208,7 @@ header {
 
 .contact{
     grid-area: contact;
-    max-width: 30px;
+    max-width: 3%;
     padding-right: 20px;
     height: auto;
     display: flex;
@@ -117,11 +238,4 @@ header {
     list-style: none;
 }
 
-nav {
-padding: 10px;
-min-height: 50px;
-background: white;
-color: black;
-font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
-}
