--- a/style.css
+++ b/style.css
@@ -190,14 +190,12 @@ html, body {
     width: 60%;
   }
 }
-main {
+main, #hero {
     position: relative;
     min-height: 100vh;
 }
 
-
 footer {
-    position: -webkit-sticky;
     position: sticky;
     bottom: 0;
     background-color: #1f1f1f;
@@ -209,7 +207,7 @@ footer {
     background-color: black;
     z-index: 100;
     display: flex;
-    padding: 1rem 2 rem;
+    padding: 1rem 2rem;
     font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 }
