--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html, body {
     font-size: 30px;
     cursor: pointer;
     padding: 0 1rem;
-    color: black;
+    color: #000000;
 }
 
 .nav-links {
@@ -49,7 +49,7 @@ html, body {
 }
 
 .nav-links li a {
-    color: grey;
+    color: #808080;
     font-size: 1.1rem;
 }
 
@@ -68,7 +68,7 @@ html, body {
      .nav-links {
         display: none;
         flex-direction: column;
-        background-color: white;
+        background-color: #ffffff;
         position: absolute;
         top: 10vh;
         left: 0;
@@ -118,12 +118,6 @@ html, body {
         padding-right: 0;
     }
 
-    .button {
-        margin-left: 0;
-        padding: 10px 20px;
-        font-size: 0.9rem;
-    }
-
     footer{
         flex-direction: column; 
     }
@@ -169,7 +163,7 @@ html, body {
   }
 }
 
-/* ------------------ TABLET ------------------ */
+/* tablet */
 @media (min-width: 768px) and (max-width: 1024px) {
   nav > ul {
     gap: 1.5rem;
@@ -248,6 +242,7 @@ h2 {
     color: black;
     padding: 15px 30px;
     border: 10px;
+    border-radius: 100px;
 }
 
 .performance-specs {
