--- a/styleError404.css
+++ b/styleError404.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -31,7 +32,8 @@ html, body {
   overflow-x: hidden;
   width: 100%;
   font-family: 'Poppins', sans-serif;
-  background-color: #f4f4f4;
+  --variable-bg-color : #ffffff;
+  background-color: var(--variable-bg-color); 
 }
 
 .divImage {
